@@ -3,19 +3,22 @@ package com.pragma.powerup.infrastructure.configuration.security;
 import com.pragma.powerup.infrastructure.out.jpa.entity.UserEntity;
 import lombok.AllArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @AllArgsConstructor
 public class UserDetailsImpl implements UserDetails {
 
     private final UserEntity userEntity;
 
+
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority(userEntity.getRol().getNombre()));
     }
 
     @Override
@@ -50,5 +53,9 @@ public class UserDetailsImpl implements UserDetails {
 
     public String getNombre(){
         return userEntity.getNombre();
+    }
+
+    public Long getId() {
+        return userEntity.getId();
     }
 }
